# Knapsack-2D-Allocation

./: .gitignore  Cargo.toml  README.md  test.txt
src/: dataset_loader.rs  genetic_algorithm.rs  image_writer.rs  item.rs  main.rs  math.rs  util.rs
src/types/: container.rs  item.rs  mod.rs  stats.rs
