[package]
name = "knapsack_2d_allocation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
md5 = "0.7.0"
clap = "~2.27.0"
text_io = "0.1.9"
image = "0.21"
signal-hook = "0.3.4"
crossbeam = "0.7.3"
num-traits = "0.2.14"
